# TiN

speedometer/: CMakeLists.txt  sdkconfig
speedometer/components/speedometer_core/: CMakeLists.txt
speedometer/components/speedometer_core/include/: bluetooth.h  halAH49E.h  i2c.h  imuB160.h  led.h  linearBuffer.h  main.h  types.h
speedometer/components/speedometer_core/source/: bluetooth.c  halAH49E.c  i2c.c  imuB160.c  led.c  linearBuffer.c
speedometer/components/test/: CMakeLists.txt  bluetooth_test.c  halAH59E_test.c  i2c_test.c  imuB160_test.c  led_test.c  linearBuffer_test.c  main_test.c
speedometer/main/: CMakeLists.txt  main.c
